Article V3: Fix too small column in tables

--- a/src/styles/components/ArticleV3/ArticleCellOutput.scss
+++ b/src/styles/components/ArticleV3/ArticleCellOutput.scss
@@ -10,6 +10,14 @@ $module: ".ArticleCellOutput";
 
   &.withHTML {
     overflow: auto;
+
+    table {
+      width: max-content;
+
+      td {
+        max-width: 300px;
+      }
+    }
   }
 }
 
